--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dev_dependencies:
   flutter_layout_grid: 2.0.1
   rxdart: ^0.27.7
   flutter_riverpod: ^2.0.2
+  sembast: ^3.3.1
+  path_provider: ^2.0.11
+  sembast_web: ">=1.0.0"
   # riverpod: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
